--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li><a href="https://www.linkedin.com/in/erickramossilva">Linkedin</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://github.com/erickramosxp">Github</a></li>
+    <li><span>•</span></li>
+    <li><a href="#">Undefined</a></li>
+  </ul>
+</div>
