--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,11 +5,11 @@
 <app-menu-title></app-menu-title>
 <div class="articles">
   <div class="container__articles">
-    <app-big-card></app-big-card>
+    <app-big-card photoCover="" cardTitle="" cardDescription=""></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
-    <app-small-card></app-small-card>
+    <app-small-card cardTitle="" photoCover=""></app-small-card>
+    <app-small-card cardTitle="" photoCover=""></app-small-card>
+    <app-small-card cardTitle="" photoCover=""></app-small-card>
   </div>
 </div>
