--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,17 +2,17 @@
 
   <div class="big-card__picture">
     <img
-     src="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png" alt=""
+     src="{{ photoCover }}" alt=""
      height="300px"
      >
   </div>
   <div class="big-card__title">
-    <h1><a href="#">Nova versão do Angular</a></h1>
+    <h1><a href="#">{{ cardTitle }}</a></h1>
   </div>
   <div class="big-card__description">
     <p>
       <a href="#">
-       blablablablabla
+       {{ cardDescription }}
       </a>
     </p>
   </div>
