--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,11 +2,11 @@
   <div class="small__card-card-content">
     <div class="small__card-photo">
       <img
-      src="https://cordierinvestimentos.com.br/wp-content/uploads/2020/09/placeholder.png" alt=""
+      src="{{ photoCover }}" alt=""
       >
     </div>
     <div class="small-card__title">
-      <h1><a href="#">Nova versão do Angular</a></h1>
+      <h1><a href="#">{{ cardTitle }}</a></h1>
     </div>
   </div>
   <div class="container__small-card-separator">
