--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,28 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 <div class="articles">
   <div class="container__articles">
-    <app-big-card photoCover="" cardTitle="" cardDescription=""></app-big-card>
+    <app-big-card
+    Id="1"
+    photoCover="https://lumiere-a.akamaihd.net/v1/images/iron_man_marvel_d9ce0209.jpeg?region=36,0,713,399"
+    cardTitle="Novo filme do Homem de ferro"
+    cardDescription=""></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card cardTitle="" photoCover=""></app-small-card>
-    <app-small-card cardTitle="" photoCover=""></app-small-card>
-    <app-small-card cardTitle="" photoCover=""></app-small-card>
+    <app-small-card
+      Id="2"
+      cardTitle="Pantera negra desaparece"
+      photoCover="https://s2-g1.glbimg.com/oJkGizFjn4akn1vKHrDGqwKjZAc=/0x253:767x782/1008x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_59edd422c0c84a879bd37670ae4f538a/internal_photos/bs/2019/J/h/kEuFn3Q12P6R7lAISWMQ/000-1kf1bm.jpg"
+    >
+    </app-small-card>
+    <app-small-card
+    Id="3"
+    cardTitle="O que será de nós"
+    photoCover="https://classic.exame.com/wp-content/uploads/2016/09/size_960_16_9_gravidade-filme1.jpg?quality=70&strip=info&w=920"
+    ></app-small-card>
+    <app-small-card
+    Id="4"
+    cardTitle="Amigos do BlackHole"
+    photoCover="https://preview.redd.it/astronaut-looking-at-a-blackhole-v0-aj6p530yui3a1.png?auto=webp&s=3eacecbb982962e8c99401dca0821e46df4263e9"
+    ></app-small-card>
   </div>
 </div>
